# order-book-publisher

./: .gitignore  README.md  package-lock.json
client/spread-publisher/: README.md  package-lock.json  package.json
client/spread-publisher/src/: App.vue  main.js  order-book_grpc_web_pb.js  order-book_pb.js
client/spread-publisher/src/components/: OrderBookVisualizer.vue
envoy/: envoy.yaml
protos/: order-book.proto
server/order-book-service/: Cargo.toml  build.rs
server/order-book-service/proto/: order-book.proto
server/order-book-service/src/: api_objects.rs  archive.rs  book_summary_endpoint.rs  encoders_decoders.rs  main.rs  orderbook.rs  server.rs  utils.rs
server/order-book-service/src/exchanges/: binance.rs  bitstamp.rs  data_structs.rs  mod.rs  traits.rs  various.rs
server/order-book-service/src/pull_orders/: mod.rs  traits.rs
