[package]
name = "order-book-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/main.rs"
name="connect-exchanges"

[[bin]]
path = "src/server.rs"
name="order-book-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.8"
futures-channel = "0.3.25"
url = "2.3.1"
tokio-tungstenite = {version="0.16.0", features = ["native-tls"]}
futures-util = "0.3.25"
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_yaml = "0.9.17"

[build-dependencies]
tonic-build = "0.8.4"
